--- a/hcds-a7-project-report.ipynb
+++ b/hcds-a7-project-report.ipynb
@@ -617,7 +617,7 @@
     "\n",
     "In the cells below, we will first calculate our contigency table, followed by the test statistics to interpret our final results. \n",
     "\n",
-    "The following [link](https://machinelearningmastery.com/chi-squared-test-for-machine-learning/) was used as a reference for "
+    "The following [link](https://machinelearningmastery.com/chi-squared-test-for-machine-learning/) was used as a reference for this analysis."
    ]
   },
   {
